# wayback-machine-mcp

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/workflows/: test.yml
docs/adr/: 0001-no-capture-resolver-primitive.md  0002-consolidate-on-cdx-for-availability.md  0002-per-endpoint-auth-routing.md  0003-circuit-breaker-for-cdx.md  0004-default-collapse-timestamp-day.md
research/: PRD.md  design-decisions.md  snapshot-extraction-spike.md  spike.py
src/: config.py  install.py  log.py  models.py  server.py
src/client/: cache.py  cdx.py  circuit_breaker.py  extractor.py  http.py  parsers.py  rate_limiter.py
src/tools/: content.py  search.py  snapshots.py
tests/: conftest.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_content.py  test_e2e_stdio.py  test_extractor.py  test_install.py  test_prompts.py  test_resources.py  test_search.py  test_snapshots.py
tests/integration/: test_check_availability.py  test_get_item_metadata.py  test_get_snapshot_content.py  test_lookup_snapshots.py  test_resource_item.py  test_search_archive.py  test_search_domain.py
