[project]
name = "mcp-server-wayback"
version = "0.2.5"
description = "MCP server giving Claude and other LLM clients structured access to the Internet Archive's Wayback Machine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lakshya Mehta", email = "lakshyamehta03@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "internet-archive",
    "wayback-machine",
    "archive",
    "claude",
    "anthropic",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/lakshyamehta03/wayback-machine-mcp"
Repository = "https://github.com/lakshyamehta03/wayback-machine-mcp"
Issues = "https://github.com/lakshyamehta03/wayback-machine-mcp/issues"

[project.scripts]
mcp-server-wayback = "wayback_mcp.server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wayback_mcp", "wayback_mcp.client", "wayback_mcp.tools"]

[tool.setuptools.package-dir]
"wayback_mcp" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselected by default)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "build>=1.2",
    "twine>=5.0",
]
